--- a/index.html
+++ b/index.html
@@ -1,18 +1,65 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Jumbo</title>
+<head>
+    <meta charset="UTF-8" />
+    <title>Jumbo</title>
 
-        <script src="lib/phaser.min.js"></script>
-        <script src="lib/synaptic.js"></script>
+    <script src="lib/phaser.min.js"></script>
+    <script src="lib/synaptic.js"></script>
 
-        <script src="pelota.js" type="text/javascript"></script>
+    <!-- Initial script will be loaded dynamically -->
+    <script id="gameScript" type="text/javascript"></script>
 
-    </head>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #333;
+            color: #fff;
+        }
+        .menu {
+            text-align: center;
+        }
+        .menu h1 {
+            margin-bottom: 50px;
+        }
+        .menu button {
+            padding: 20px;
+            margin: 10px;
+            font-size: 20px;
+            cursor: pointer;
+            border: none;
+            border-radius: 10px;
+            background-color: #555;
+            color: white;
+        }
+        .menu button:hover {
+            background-color: #777;
+        }
+    </style>
 
-    <body>
+    <script type="text/javascript">
+        function loadScript(scriptName) {
+            var newScript = document.createElement('script');
+            newScript.id = 'gameScript';
+            newScript.type = 'text/javascript';
+            newScript.src = scriptName + '.js';
 
+            document.body.innerHTML = ''; // Clear the menu
+            document.body.appendChild(newScript); // Add the selected script
+        }
+    </script>
+</head>
 
-    </body>
+<body>
+    <div class="menu">
+        <h1>Selecciona un juego</h1>
+        <button onclick="loadScript('pelota')">Pelota</button>
+        <button onclick="loadScript('demo1')">Demo1</button>
+    </div>
+</body>
 </html>
