--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Jumbo</title>
+    <title>IA</title>
 
     <script src="lib/phaser.min.js"></script>
     <script src="lib/synaptic.js"></script>
@@ -59,7 +59,7 @@
     <div class="menu">
         <h1>Selecciona un juego</h1>
         <button onclick="loadScript('pelota')">Pelota</button>
-        <button onclick="loadScript('demo1')">Demo1</button>
+        <button onclick="loadScript('demo1')">3 Balas</button>
     </div>
 </body>
 </html>
